# Vecore

./: .gitignore  CMakeLists.txt  README.md  Tensor.cpp  Tensor.h  fix_links.py  optim.h  train_mnist.cpp
docs/: fix_sidebar.py  index.html  results.json
docs/assets/: docs.css
docs/docs/: cuda.html  data.html  getting-started.html  nn.html  optim.html  sequential.html  tensor.html
examples/: train.cpp  train_mnist.cpp  train_mnist_pytorch.py  train_pytorch.py
include/micrograd/: CMakeLists.txt
include/vecore/: Tensor.h  data.h  nn.h  optim.h  sequential.h
src/: CMakeLists.txt  Tensor.cpp
